cambios del index

--- a/index.html
+++ b/index.html
@@ -90,6 +90,38 @@
                 <a href="https://goo.gl/maps/yVaKmmkUBB4DEHRQA"><img src="./img/ubicacion.png" alt="Ubicación" height="100" class="ubicación"></a>
             </p>
         </div>
+        <section class="container-fluid section1">
+            <div class="row">
+                <h4 class="section_titulo">Proximamente...</h4>
+            </div>
+            <div class="row proximamente-div">
+                <div class="card text-center index-card" style="width: 16rem;">
+                    <img src="./img/buzo2.png" class="card-img-top" alt="Diseño del joggin del coro">
+                    <div class="card-body">
+                        <h5 class="card-title">Buzo <br>(opción1)</h5>
+                    </div>
+                </div>
+                <div class="card text-center index-card" style="width: 16rem;">
+                    <img src="./img/buzo1.png" class="card-img-top" alt="Diseño del buzo del coro">
+                    <div class="card-body">
+                        <h5 class="card-title">Buzo <br>(Opción 2)</h5>
+                    </div>
+                </div>
+                <div class="card text-center index-card" style="width: 16rem;">
+                    <img src="./img/remera1.png" class="card-img-top" alt="Diseño de la remera del coro">
+                    <div class="card-body">
+                        <h5 class="card-title">Remera <br>(Opción 1)</h5>
+                    </div>
+                </div>
+                <div class="card text-center index-card" style="width: 16rem;">
+                    <img src="./img/remera2.png" class="card-img-top" alt="Diseño de la remera del coro">
+                    <div class="card-body">
+                        <h5 class="card-title">Remera <br>(Opción 2)</h5>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
     <footer>
         <a title="Instagram" href="https://www.instagram.com/corosantoto/?hl=es-la" target="blank" class="linkRedes"><img src="./img/instagram.png" alt="Instagram" width="50" height="50" class="linkRedes"></a>    
