Agregando h1 y texto al index

--- a/pages/calendario.html
+++ b/pages/calendario.html
@@ -42,8 +42,8 @@
             <div class="row g-0">
                 <div class="col-md-6">
                     <div class="card-body">
-                        <h3 class="card-title">Mire el calendario aquí</h3>
-                        <p class="card-text">Un calendario interactivo para que nuestros seguidores puedan informarse acerca de las próximas fechas, fechas importantes y ¡mucho más!</p>
+                        <h2 class="card-title">Mire el calendario aquí</h2>
+                        <p class="card-text">Un calendario interactivo para que nuestros seguidores puedan informarse <br>acerca de las próximas fechas, eventos importantes y ¡mucho más!</p>
                         <a href="https://calendar.google.com/calendar/u/0/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America/Argentina/Buenos_Aires&amp;src=Y29yb3NhbnRvdG8xMUBnbWFpbC5jb20&amp;src=YWRkcmVzc2Jvb2sjY29udGFjdHNAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;src=ZXMuYXIjaG9saWRheUBncm91cC52LmNhbGVuZGFyLmdvb2dsZS5jb20&amp;src=ZW4uYXIjaG9saWRheUBncm91cC52LmNhbGVuZGFyLmdvb2dsZS5jb20&amp;color=%23039BE5&amp;color=%2333B679&amp;color=%230B8043&amp;color=%230B8043&amp;title=Coro" class="btn btn-primary" style="justify-content: center;" target="_blank" rel="noopener noreferrer">Click aquí</a>
                     </div>
                 </div>
