--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -42,7 +42,7 @@
             <div class="row g-0">
                 <div class="col-md-6">
                     <div class="card-body">
-                        <h3 class="card-title">Haga su consulta aquí</h3>
+                        <h2 class="card-title formulario__titulo">Haga su consulta aquí</h2>
                             <div class="contacto-form">
                                 <form class="row g-3 formulario">  
                                     <div class="col-md-6">
