--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         </nav>
     </header>
     <main class="mainIndex0">
+        <h1 class="integrantes">Home</h1>
         <div id="carouselExampleIndicators" class="carousel slide divIndex1 contenedorCar" data-bs-ride="carousel">
             <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -62,17 +63,16 @@
             </button>
         </div>
         <div class="divIndex2"> 
-            <p class="divIndex2__titulo">¡Bienvenidos!</p>
+            <p class="divIndex2__titulo">¿Quiénes somos?</p>
             <p class="divIndex2__texto">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                <br>Magni non nulla illum nihil rem vitae, eaque, reprehenderit voluptates necessitatibus 
-                <br>eius iste,obcaecati rerum? Autem necessitatibus quia quis repellat perferendis iure. 
-                <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, illo ut. Eius animi 
-                <br>placeat facilis sint reiciendis aliquid repudiandae laborum? Quas dignissimos pariatur
-                <br>a aliquid voluptatem iste magni. Repellendus, aliquam! Lorem ipsum dolor, sit amet 
-                <br>consectetur adipisicing elit. Modi fuga mollitia nam ullam aut quis reiciendis vero 
-                <br>aspernatur ducimus! Sit repudiandae dolores neque perferendis <br>delectus alias architecto 
-                modi ullam eaque?
+                El Coro Santoto fue fundado en 2011 por Enzo Ferrari, graduado de la
+                <br> UCA en Lic. en Dirección Coral y Lic. en Composición.Desde entonces, 
+                <br>Ferrari ejerce como director del coro; siendo, no solo el que toma las grandes 
+                <br>decisiones,sino un maestro y guía para todos. El funcionamiento del coro se lleva 
+                <br>a cabo en el Colegio Santo Tomás de Aquino, en donde estudian sus integrantes. 
+                <br>Actualmente está compuesto por 20 alumnos de 3ro, 4to y 5to año de dicho colegio.
+                <br>A su vez, tiene u repertorio mayoritario de canciones religiosas debido a la 
+                <br>orientación del colegio; sin embargo, de vez en cuando hay excepciones.
             </p>
         </div>
         <div class="divIndex3">
