--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -46,15 +46,15 @@
                     <div class="card-body">
                         <h2 class="card-title">Via Crucis</h2>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        <br>Magni non nulla illum nihil rem vitae, eaque, reprehenderit voluptates necessitatibus 
-                        <br>eius iste,obcaecati rerum? Autem necessitatibus quia quis repellat perferendis iure. 
-                        <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, illo ut. Eius animi 
-                        <br>placeat facilis sint reiciendis aliquid repudiandae laborum? Quas dignissimos pariatur
-                        <br>a aliquid voluptatem iste magni. Repellendus, aliquam! Lorem ipsum dolor, sit amet 
-                        <br>consectetur adipisicing elit. Modi fuga mollitia nam ullam aut quis reiciendis vero 
-                        <br>aspernatur ducimus! Sit repudiandae dolores neque perferendis <br>delectus alias architecto 
-                        modi ullam eaque?
+                            El Via Crucis (camino de la cruz) es una de las fechas más 
+                            <br>conmemorativas para el coro y el Santo Tomás. Para este evento, los alumnos de 5to 
+                            <br>año del colegio ayudan a los de 1ero a preparar una representación actuada de los 
+                            <br>hechos. El miércoles Santo todo el colegio se reúne para ver la obra, y el coro acompaña 
+                            <br>con la musicalización cantando aproximadamente 12 canciones a lo largo de las escenas. 
+                            <br>Para los chicos del coro es un momento muy especial, en dónde se unen mediante la música 
+                            <br>y expresan de una forma muy especial todo lo que las letras intentan transmitir. En esta 
+                            <br>ocasión pueden escuchar un fragmento de la canción “Cristo Reina”, del Via Crucis del 
+                            <br>2019, con un arreglo coral compuesto por el director del coro.
                         </p>
                     </div>
                 </div>
@@ -66,15 +66,15 @@
                     <div class="card-body">
                         <h2 class="card-title">Coropalooza</h2>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            <br>Magni non nulla illum nihil rem vitae, eaque, reprehenderit voluptates necessitatibus 
-                            <br>eius iste,obcaecati rerum? Autem necessitatibus quia quis repellat perferendis iure. 
-                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, illo ut. Eius animi 
-                            <br>placeat facilis sint reiciendis aliquid repudiandae laborum? Quas dignissimos pariatur
-                            <br>a aliquid voluptatem iste magni. Repellendus, aliquam! Lorem ipsum dolor, sit amet 
-                            <br>consectetur adipisicing elit. Modi fuga mollitia nam ullam aut quis reiciendis vero 
-                            <br>aspernatur ducimus! Sit repudiandae dolores neque perferendis <br>delectus alias architecto 
-                            modi ullam eaque?
+                            El Coropalooza es una presentación que se llevó a cabo por 
+                            <br>primera vez en el año 2019, en la sede de Colegiales del colegio. Fue un 9 de agosto 
+                            <br>cuando los integrantes del coro demostraron no solo el conocimiento y práctica musical 
+                            <br>que tenían, sino que dejaron ver ese lazo invisible que los unía; la música. Durante 
+                            <br>el concierto el coro interpreta un total de 27 canciones de las cuales la mayoría son 
+                            <br>religiosas. Sin embargo, se pueden escuchar canciones en inglés como “Baby on board” y 
+                            <br>“Halelluja”, y hasta un remix de una canción religiosa con una de Ed Sheeran. Este encuentro 
+                            <br>está abierto al público y se puede acceder mediante la adquisición de una entrada. Pueden 
+                            <br>disfrutar de “Volved a mí”, una de las canciones del evento de 2019. 
                         </p>
                     </div>
                 </div>
@@ -92,15 +92,17 @@
                     <div class="card-body">
                         <h2 class="card-title">Noche de los Coros</h2>
                         <p class="card-text">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            <br>Magni non nulla illum nihil rem vitae, eaque, reprehenderit voluptates necessitatibus 
-                            <br>eius iste,obcaecati rerum? Autem necessitatibus quia quis repellat perferendis iure. 
-                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, illo ut. Eius animi 
-                            <br>placeat facilis sint reiciendis aliquid repudiandae laborum? Quas dignissimos pariatur
-                            <br>a aliquid voluptatem iste magni. Repellendus, aliquam! Lorem ipsum dolor, sit amet 
-                            <br>consectetur adipisicing elit. Modi fuga mollitia nam ullam aut quis reiciendis vero 
-                            <br>aspernatur ducimus! Sit repudiandae dolores neque perferendis <br>delectus alias architecto 
-                            modi ullam eaque?
+                                La Noche de los Coros es un evento que se desarrolla todos 
+                            <br>los años en la ciudad de Chacabuco. En el año 2019, el coro fue convocado no solo para 
+                            <br>cantar, sino que para abrir la presentación. Este suceso fue de suma importancia para 
+                            <br>el coro, pero sobre todo para el director quien es oriundo de dicha ciudad. Una de las 
+                            <br>canciones que interpretaron en el evento fue “La Rueda Mágica” escrita por Fito Paez con 
+                            <br>un arreglo de Enzo Ferrari. También cantaron en la Parroquia San Isidro Labrador, donde 
+                            <br>fueron aplaudidos de pie por los presentes, y fueron a visitar la escuela N°22 “Vicente 
+                            <br>López y Planes”, de la cual son padrinos. El viaje a Chacabuco fue un viaje repleto de 
+                            <br>emociones, encuentros, personas y canciones que siempre quedarán en el corazón de los que 
+                            <br>tuvieron la oportunidad de ir. La foto que ven a la izquierda fue tomada por un periodista 
+                            <br>del diario “De Hoy” que le hizo una nota al director.
                         </p>
                     </div>
                 </div>
