--- a/pages/integrantes.html
+++ b/pages/integrantes.html
@@ -38,14 +38,15 @@
     <main>
         <h1 class="integrantes">Integrantes</h1>
         <section class="integrantes__explicacion">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.agni non nulla illum nihil rem vitae, eaque, reprehenderit voluptates necessitatibus eius iste,obcaecati rerum?  
-            <br>Autem necessitatibus quia quis repellat perferendis iure.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, illo ut. Eius animi placeat facilis sint reiciendis 
-            <br>aliquid repudiandae laborum? Quas dignissimos pariatura aliquid voluptatem iste magni. Repellendus, aliquam! Lorem ipsum dolor, sit amet consectetur adipisicing elit.  
-            <br>Modi fuga mollitia nam ullam aut quis reiciendis veroaspernatur ducimus! Sit repudiandae dolores neque perferendis.delectus alias architecto modi ullam eaque? 
-            <br>Lorem ipsum dolor sit amet consectetur adipisicing elit.Magni non nulla illum nihil rem vitae, eaque, reprehenderit voluptates necessitatibus eius iste,obcaecati rerum? 
-            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, illo ut. Eius animi placeat facilis sint reiciendis aliquid repudiandae laborum? Quas dignissimos pariatur
-            <br>a aliquid voluptatem iste magni. Repellendus, aliquam! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi fuga mollitia nam ullam aut quis reiciendis vero 
-            <br>aspernatur ducimus! Sit repudiandae dolores neque perferendis delectus alias architecto modi ullam eaque?
+                El coro está formado por alumnos del Colegio Santo Tomás de Aquino, principalmente de 3ero a 5to año. La dirección es llevada a cabo por Enzo Ferrari, quien elige a 6 chicos 
+            <br>de quinto año para que conformen junto a él la “Mesa Chica”. La función de este organismo (la Mesa Chica) es ayudar al director a organizar a los chicos, enseñar las partes de 
+            <br>los arreglos, informar de algún inconveniente y actuar como guías para los más chicos. Cuenta con seis puestos, de los cuales cuatro son jefes de cuerda (bajo, tenor, contralto 
+            <br>y soprano), hay un/a subdirector/a que actúa como la mano derecha del director y reemplazo en caso de ausencia, y un/a asistente general quien se encarga de tomar lista, organizar 
+            <br>los ensayos y de las redes sociales. A su vez, todos los integrantes del coro pasan por una audición antes de entrar en dónde el director puede escuchar de forma más precisa el 
+            <br>registro de cada uno. Esto desemboca en la separación por cuerdas: bajo, tenor , contralto y soprano. Las dos primeras cuerdas son de hombres, perteneciendo a bajo los de registro 
+            <br>más grave y a tenor los de registro más agudo. Las siguientes son de mujeres, formando parte de contralto las de registro grave (siendo mayormente la “leading voice”) y de soprano 
+            <br>las de agudo. A su vez, el coro cuenta con una variedad de instrumentos que son tocados por alumnos: guitarras (criolla, acústica y eléctrica), un bajo, un cajón peruano, un violín; 
+            <br>y un teclado que usualmente se utiliza para el warming up. A continuación les presentamos a los miembros del Coro Santoto.
         </section>
         <section class="mesaChica">
             <p>
