Agregando fotos y cambiando la disposición y texto

--- a/pages/integrantes.html
+++ b/pages/integrantes.html
@@ -37,7 +37,8 @@
     </header>
     <main>
         <h1 class="integrantes">Integrantes</h1>
-        <section class="integrantes__explicacion">
+        <div class="div-integrantes">
+            <section class="integrantes__explicacion">
                 El coro está formado por alumnos del Colegio Santo Tomás de Aquino, principalmente de 3ero a 5to año. La dirección es llevada a cabo por Enzo Ferrari, quien elige a 6 chicos 
             <br>de quinto año para que conformen junto a él la “Mesa Chica”. La función de este organismo (la Mesa Chica) es ayudar al director a organizar a los chicos, enseñar las partes de 
             <br>los arreglos, informar de algún inconveniente y actuar como guías para los más chicos. Cuenta con seis puestos, de los cuales cuatro son jefes de cuerda (bajo, tenor, contralto 
@@ -46,81 +47,24 @@
             <br>registro de cada uno. Esto desemboca en la separación por cuerdas: bajo, tenor , contralto y soprano. Las dos primeras cuerdas son de hombres, perteneciendo a bajo los de registro 
             <br>más grave y a tenor los de registro más agudo. Las siguientes son de mujeres, formando parte de contralto las de registro grave (siendo mayormente la “leading voice”) y de soprano 
             <br>las de agudo. A su vez, el coro cuenta con una variedad de instrumentos que son tocados por alumnos: guitarras (criolla, acústica y eléctrica), un bajo, un cajón peruano, un violín; 
-            <br>y un teclado que usualmente se utiliza para el warming up. A continuación les presentamos a los miembros del Coro Santoto.
-        </section>
-        <section class="mesaChica">
-            <p>
-                <h2 class="mesaChica__titulo">Mesa chica</h4>
-            </p>
-            <p class="mesaChica__imágenes0">
-                <img src="../img/persona.png" alt="persona" class="integrantes_img">
-                <img src="../img/persona.png" alt="persona" class="integrantes_img">
-                <img src="../img/persona.png" alt="persona" class="integrantes_img">
-                <img src="../img/persona.png" alt="persona" class="integrantes_img">
-                <img src="../img/persona.png" alt="persona" class="integrantes_img">
-                <img src="../img/persona.png" alt="persona" class="integrantes_img">
-                <img src="../img/persona.png" alt="persona" class="integrantes_img">
-            </p>
-        </section>
-        <section class="cuerdas">
-            <h2 class="cuerdas__titulo">Cuerdas</h2>
-            <div class="cuerdas__div">
-                <p class="cuerdas__subtitulo">
-                    Bajo
-                </p>
-                <p class="cuerdas__imágenes">
-                    <img src="../img/persona.png" alt="persona" class="integrantes_img">
-                    <img src="../img/persona.png" alt="persona" class="integrantes_img">
-                    <img src="../img/persona.png" alt="persona" class="integrantes_img">
-                    <img src="../img/persona.png" alt="persona" class="integrantes_img">
-                    <img src="../img/persona.png" alt="persona" class="integrantes_img">
-                    <img src="../img/persona.png" alt="persona" class="integrantes_img">
-                    <img src="../img/persona.png" alt="persona" class="integrantes_img">
-                </p>
+            <br>y un teclado que usualmente se utiliza para el warming up. Actualmente el número de integrantes disminuyó ya que por la pandemia del 2020 y los ensayos virtuales muchos decidieron 
+            <br>no seguir participando del coro.  A continuación les presentamos a los actuales miembros del Coro Santoto.
+            </section>
+            <section>
+            <div class="mesaChica__imágenes0">
+                <img src="../img/Enzo.JPG" alt="persona" class="integrantes_img">
+                <img src="../img/martu.JPG" alt="persona" class="integrantes_img">
+                <img src="../img/Sofi.JPG" alt="persona" class="integrantes_img">
+                <img src="../img/fran.JPG" alt="persona" class="integrantes_img">
+                <img src="../img/silvi.JPG" alt="persona" class="integrantes_img">
+                <img src="../img/feli.JPG" alt="persona" class="integrantes_img">
+                <img src="../img/mili.JPG" alt="persona" class="integrantes_img">
+                <img src="../img/nachi.JPG" alt="persona" class="integrantes_img">
+                <img src="../img/cata.JPG" alt="persona" class="integrantes_img">
+                <img src="../img/rochi.JPG" alt="persona" class="integrantes_img">
             </div>
-            <div class="cuerdas__div">
-                <p class="cuerdas__subtitulo">
-                    Tenor
-                </p>
-                <p class="cuerdas__imágenes">
-                    <img src="../img/persona.png" alt="persona" class="integrantes_img">
-                    <img src="../img/persona.png" alt="persona" class="integrantes_img">
-                    <img src="../img/persona.png" alt="persona" class="integrantes_img">
-                    <img src="../img/persona.png" alt="persona" class="integrantes_img">
-                    <img src="../img/persona.png" alt="persona" class="integrantes_img">
-                    <img src="../img/persona.png" alt="persona" class="integrantes_img">
-                    <img src="../img/persona.png" alt="persona" class="integrantes_img">
-                </p>
-            </div>
-            <div class="cuerdas__div">
-                <p class="cuerdas__subtitulo">
-                    Contralto
-                </p>
-                <p class="cuerdas__imágenes">
-                    <img src="../img/persona.png" alt="persona" class="integrantes_img">
-                    <img src="../img/persona.png" alt="persona" class="integrantes_img">
-                    <img src="../img/persona.png" alt="persona" class="integrantes_img">
-                    <img src="../img/persona.png" alt="persona" class="integrantes_img">
-                    <img src="../img/persona.png" alt="persona" class="integrantes_img">
-                    <img src="../img/persona.png" alt="persona" class="integrantes_img">
-                    <img src="../img/persona.png" alt="persona" class="integrantes_img">
-                </p>
-            </div>
-            <div class="cuerdas__div">
-                <p class="cuerdas__subtitulo">
-                    Soprano
-                </p>
-                <p class="cuerdas__imágenes">
-                    <img src="../img/persona.png" alt="persona" class="integrantes_img">
-                    <img src="../img/persona.png" alt="persona" class="integrantes_img">
-                    <img src="../img/persona.png" alt="persona" class="integrantes_img">
-                    <img src="../img/persona.png" alt="persona" class="integrantes_img">
-                    <img src="../img/persona.png" alt="persona" class="integrantes_img">
-                    <img src="../img/persona.png" alt="persona" class="integrantes_img">
-                    <img src="../img/persona.png" alt="persona" class="integrantes_img">
-                </p>
-            </div>
-        </section>
+            </section>
+        </div>
     </main>
     <footer>
         <a title="Instagram" href="https://www.instagram.com/corosantoto/?hl=es-la" target="blank" class="linkRedes"><img src="../img/instagram.png" alt="Instagram" width="50" height="50" class="linkRedes"></a>    
