--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                 <br>Ferrari ejerce como director del coro; siendo, no solo el que toma las grandes 
                 <br>decisiones,sino un maestro y guía para todos. El funcionamiento del coro se lleva 
                 <br>a cabo en el Colegio Santo Tomás de Aquino, en donde estudian sus integrantes. 
-                <br>Actualmente está compuesto por 20 alumnos de 3ro, 4to y 5to año de dicho colegio.
-                <br>A su vez, tiene u repertorio mayoritario de canciones religiosas debido a la 
+                <br>Actualmente está compuesto por alumnos de 3ro, 4to y 5to año de dicho colegio.
+                <br>A su vez, cuenta con un repertorio mayoritario de canciones religiosas debido a la 
                 <br>orientación del colegio; sin embargo, de vez en cuando hay excepciones.
             </p>
         </div>
