--- a/pages/integrantes.html
+++ b/pages/integrantes.html
@@ -52,16 +52,16 @@
             </section>
             <section>
             <div class="mesaChica__imágenes0">
-                <img src="../img/Enzo.JPG" alt="persona" class="integrantes_img">
-                <img src="../img/martu.JPG" alt="persona" class="integrantes_img">
-                <img src="../img/Sofi.JPG" alt="persona" class="integrantes_img">
-                <img src="../img/fran.JPG" alt="persona" class="integrantes_img">
-                <img src="../img/silvi.JPG" alt="persona" class="integrantes_img">
-                <img src="../img/feli.JPG" alt="persona" class="integrantes_img">
-                <img src="../img/mili.JPG" alt="persona" class="integrantes_img">
-                <img src="../img/nachi.JPG" alt="persona" class="integrantes_img">
-                <img src="../img/cata.JPG" alt="persona" class="integrantes_img">
-                <img src="../img/rochi.JPG" alt="persona" class="integrantes_img">
+                <img src="../img/enzo.JPG" alt="integrante del coro" class="integrantes_img">
+                <img src="../img/martu.JPG" alt="integrante del coro" class="integrantes_img">
+                <img src="../img/sofi.JPG" alt="integrante del coro" class="integrantes_img">
+                <img src="../img/fran.JPG" alt="integrante del coro" class="integrantes_img">
+                <img src="../img/silvi.JPG" alt="integrante del coro" class="integrantes_img">
+                <img src="../img/feli.JPG" alt="integrante del coro" class="integrantes_img">
+                <img src="../img/mili.JPG" alt="integrante del coro" class="integrantes_img">
+                <img src="../img/nachi.JPG" alt="integrante del coro" class="integrantes_img">
+                <img src="../img/cata.JPG" alt="integrante del coro" class="integrantes_img">
+                <img src="../img/rochi.JPG" alt="integrante del coro" class="integrantes_img">
             </div>
             </section>
         </div>
