--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -54,8 +54,8 @@
                                         <input type="password" class="form-control" id="inputPassword4">
                                     </div>
                                     <div class="col-12">
-                                        <label for="inputAddress" class="form-label">Direccion</label>
-                                        <input type="text" class="form-control" id="inputAddress" placeholder="Belgrano 1234, Barrio Parque">
+                                        <label for="inputText" class="form-label">Consulta</label>
+                                        <input type="text" class="form-control" id="inputText" placeholder="Realice su consulta aquí...">
                                     </div>
                                     <div class="col-12">
                                         <label for="inputAddress2" class="form-label">Correo electronico</label>
